--- a/get-current-user-workspace-nodejs/package.json
+++ b/get-current-user-workspace-nodejs/package.json
@@ -5,8 +5,8 @@
 	"author": "miremnev",
 	"contributors": [],
 	"dependencies": {
-		"provisioning_api": "file:../sdk/provisioning/javascript",
-		"workspace_application_api": "file:../sdk/workspace/javascript"		
+		"provisioning_api": "git+https://github.com/GenesysPureEngage/provisioning-client-js.git",
+		"workspace_application_api": "git+https://github.com/GenesysPureEngage/workspace-client-js.git"
 	},
 	"scripts": {
 		"start": "node main.js"
