Added voice-ready-workspace tutorials

--- a/create-user-provisioning-nodejs/config.yaml
+++ b/create-user-provisioning-nodejs/config.yaml
@@ -4,17 +4,17 @@ categories:
   - provisioning
 displayName: NodeJS
 steps:
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "0-43"
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "3-8"
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "10-10"
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "11-19"
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "20-22"
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "23-38"
-  - file: "main.js"
+  - file: "src/main.js"
     highlight: "40-40"
