--- a/voice-ready-workspace-nodejs/config.yaml
+++ b/voice-ready-workspace-nodejs/config.yaml
@@ -1,11 +1,11 @@
-title: Get current user using Workspace API
+title: Activate Channels and change state to ready
 description: description
 categories: 
   - workspace
 displayName: Node.Js
 steps:
   - file: "src/main.js"
-    highlight: "0-36"
+    highlight: "0-63"
   - file: "src/main.js"
     highlight: "3-8"
   - file: "src/main.js"
@@ -15,6 +15,12 @@ steps:
   - file: "src/main.js"
     highlight: "20-22"
   - file: "src/main.js"
-    highlight: "23-30"
+    highlight: "23-31"
   - file: "src/main.js"
-    highlight: "32-32"
+    highlight: "32-43"
+  - file: "src/main.js"
+    highlight: "44-44"
+  - file: "src/main.js"
+    highlight: "45-52"
+  - file: "src/main.js"
+    highlight: "54-54"
