--- a/voice-ready-workspace-java/build.gradle
+++ b/voice-ready-workspace-java/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 
+
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -18,4 +19,11 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.10'
     compile ':workspace-api:1.0.0'
+    compile 'org.cometd.java:cometd-api:1.1.5'
+    compile 'org.cometd.java:cometd-java-client:3.1.2'
+    compile 'org.cometd.java:bayeux-api:3.1.2'
+    compile 'org.eclipse.jetty:jetty-client:9.4.6.v20170531'
+    
 }
+
+
