--- a/create-user-provisioning-java/build.gradle
+++ b/create-user-provisioning-java/build.gradle
@@ -9,14 +9,9 @@ if (!hasProperty('mainClass')) {
 
 repositories {
     mavenCentral()
-	
-	flatDir {
-		dirs '../sdk/provisioning/java/target'
-	}
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
-	
-	compile ':provisioning-api:1.0.0'
+	compile 'com.genesys:provisioning:1.0.0'
 }
