--- a/get-current-user-workspace-java/build.gradle
+++ b/get-current-user-workspace-java/build.gradle
@@ -9,15 +9,9 @@ if (!hasProperty('mainClass')) {
 
 repositories {
     mavenCentral()
-	
-	flatDir {
-		dirs '../sdk/provisioning/java/target'
-		dirs '../sdk/workspace/java/target'
-	}
 }
 
 dependencies {
     testCompile 'junit:junit:4.10'
-
-	compile ':workspace-api:1.0.0'
+	compile 'com.genesys:workspace:1.0.0'
 }
