--- a/get-current-session-workspace-java/build.gradle
+++ b/get-current-session-workspace-java/build.gradle
@@ -14,5 +14,9 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.10'
     compile 'com.genesys:authorization:1.0.0'
-	compile 'com.genesys:workspace:1.0.0'
+    compile 'com.genesys:workspace:1.0.0'
+    compile 'org.cometd.java:cometd-api:1.1.5'
+    compile 'org.cometd.java:cometd-java-client:3.1.2'
+    compile 'org.cometd.java:bayeux-api:3.1.2'
+    compile 'org.eclipse.jetty:jetty-client:9.4.6.v20170531'
 }
