--- a/get-current-session-workspace-nodejs/package.json
+++ b/get-current-session-workspace-nodejs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voice-ready-workspace-nodejs",
+  "name": "get-current-session-workspace-nodejs",
   "version": "1.0.0",
   "keywords": [
     "util",
@@ -10,10 +10,10 @@
   ],
   "contributors": [],
   "dependencies": {
-    "cometd": "3.1.2",
-    "cometd-nodejs-client": "1.0.1",
     "genesys-authorization-client-js": "1.0.29",
     "genesys-workspace-client-js": "1.0.68"
   },
-  "main": "src/main.js"
+  "main": "src/main.js", "scripts":{
+"start":"node src\/main.js qalvWPemcr4Gg9xB9470n7n9UraG1IFN7hgxNjd1 voice_2157_admin voice_2157_admin https:\/\/api-usw1.genhtcc.com LT_A_4444998 LT_A_4444998"}
+
 }
