--- a/targets-workspace-java/build.gradle
+++ b/targets-workspace-java/build.gradle
@@ -10,11 +10,15 @@ if (!hasProperty('mainClass')) {
 
 repositories {
     mavenCentral()
+    flatDir {
+    	dirs "../sdk/workspace/java/target"
+    }
 }
  
 dependencies {
     testCompile 'junit:junit:4.10'
-    compile 'com.genesys:provisioning:1.0.0'
+    compile 'com.genesys:authorization:1.0.0'
+	compile ':workspace:1.0.0'
     compile 'org.cometd.java:cometd-api:1.1.5'
     compile 'org.cometd.java:cometd-java-client:3.1.2'
     compile 'org.cometd.java:bayeux-api:3.1.2'
