--- a/voice-ready-workspace-java/build.gradle
+++ b/voice-ready-workspace-java/build.gradle
@@ -10,20 +10,15 @@ if (!hasProperty('mainClass')) {
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs '../sdk/provisioning/java/target'
-        dirs '../sdk/workspace/java/target'
-    }
- }
+}
  
 dependencies {
     testCompile 'junit:junit:4.10'
-    compile ':workspace-api:1.0.0'
+    compile 'com.genesys:authorization:1.0.0'
+	compile 'com.genesys:workspace:1.0.0'
     compile 'org.cometd.java:cometd-api:1.1.5'
     compile 'org.cometd.java:cometd-java-client:3.1.2'
     compile 'org.cometd.java:bayeux-api:3.1.2'
     compile 'org.eclipse.jetty:jetty-client:9.4.6.v20170531'
-    
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
 }
-
-
