--- a/voice-ready-workspace-java/config.yaml
+++ b/voice-ready-workspace-java/config.yaml
@@ -1,4 +1,4 @@
-title: Activate Channels and change state to ready
+title: Activate Channels and change state to ready using the Workspace API
 description: This example shows how to log in, activate channels and change state using the Workspace API. In this example we use CometD to recieve events when the server is done activating channels and changing state to ready.
 categories: 
   - workspace
