--- a/create-user-provisioning-nodejs/package.json
+++ b/create-user-provisioning-nodejs/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "create-user-provisioning-nodejs",
-    "version": "1.0.0",
-    "keywords": [
-        "util",
-        "functional",
-        "server",
-        "client",
-        "browser"
-    ],
-    "contributors": [],
-    "dependencies": {
-        "genesys-provisioning-client-js": "1.*.*"
-    },
-    "main": "src/main.js"
+  "name": "create-user-provisioning-nodejs",
+  "version": "1.0.0",
+  "keywords": [
+    "util",
+    "functional",
+    "server",
+    "client",
+    "browser"
+  ],
+  "contributors": [],
+  "dependencies": {
+    "genesys-provisioning-client-js": "1.0.74"
+  },
+  "main": "src/main.js"
 }
