--- a/basic-call-control-workspace-nodejs/package.json
+++ b/basic-call-control-workspace-nodejs/package.json
@@ -10,8 +10,8 @@
   ],
   "contributors": [],
   "dependencies": {
-    "yargs": "^8.0.2",
-    "genesys-workspace-client-js": "^1.0.84"
+    "genesys-workspace-client-js": "^1.0.87",
+    "yargs": "^8.0.2"
   },
   "main": "src/main.js"
 }
