--- a/voice-ready-workspace-nodejs/package.json
+++ b/voice-ready-workspace-nodejs/package.json
@@ -13,7 +13,7 @@
     "cometd": "3.1.2",
     "cometd-nodejs-client": "1.0.1",
     "genesys-authorization-client-js": "1.0.35",
-    "genesys-workspace-client-js": "1.0.74"
+    "genesys-workspace-client-js": "^1.0.87"
   },
   "main": "src/main.js"
 }
