--- a/basic-call-control-workspace-java/build.gradle
+++ b/basic-call-control-workspace-java/build.gradle
@@ -15,6 +15,6 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.10'
-    compile 'com.genesys:workspace:1.0.2'
-    compile 'args4j:args4j:2.33'
+    compile 'com.genesys:workspace:1.0.11'
+    compile 'com.genesys:authorization:1.0.3'
 }
