--- a/create-user-provisioning-java/build.gradle
+++ b/create-user-provisioning-java/build.gradle
@@ -16,3 +16,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
 	compile 'com.genesys:provisioning:1.0.1'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': mainClass
+    }
+    
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
