--- a/voice-ready-workspace-java/build.gradle
+++ b/voice-ready-workspace-java/build.gradle
@@ -19,3 +19,10 @@ dependencies {
     compile 'com.genesys:authorization:1.0.3'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': mainClass
+    }
+    
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
