added fat jar and manifest

--- a/user-data-workspace-java/build.gradle
+++ b/user-data-workspace-java/build.gradle
@@ -15,6 +15,14 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.10'
-    compile 'com.genesys:workspace:1.0.11'
+    compile 'com.genesys:workspace:1.0.15'
     compile 'com.genesys:authorization:1.0.3'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': mainClass
+    }
+    
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
