--- a/subscriptions-statistics-java/build.gradle
+++ b/subscriptions-statistics-java/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     testCompile 'junit:junit:4.10'
     compile 'com.genesys:workspace:1.0.15'
     compile 'com.genesys:authorization:1.0.17'
-    compile files('../../statistics-client-java/build/libs/statistics-1.0.38.jar')
+    compile 'com.genesys:statistics:1.0.43'
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'ch.qos.logback:logback-core:1.1.7'
     compile 'ch.qos.logback:logback-classic:1.1.7'
