--- a/basic-call-control-workspace-nodejs/config.yaml
+++ b/basic-call-control-workspace-nodejs/config.yaml
@@ -1,5 +1,5 @@
-title: Basic Call Control using the Workspace API
-description: This tutorial initializes the API, activates channels for the specified user, and waits for an inbound call. When an inbound call arrives, it will be answered, then the call will be placed on hold and retrieved, and finally released. On the release the the agent will be placed in ACW. After performing this automated sequence the API is cleaned up.
+title: Basic call control
+description: This tutorial shows you how to use the [Workspace Client Library](https://developer.genhtcc.com/api/client-libraries/workspace/) to perform basic call control functions. You'll see how use event handlers to listen for call state change messages to answer an incoming call, hold it, retrieve it, and then hang up. We'll also update the agent's DN and use that as a trigger to end the tutorial.
 categories: 
   - workspace
 displayName: Node.Js
