--- a/user-data-workspace-java/config.yaml
+++ b/user-data-workspace-java/config.yaml
@@ -1,5 +1,5 @@
-title: Changing User Data using the Workspace API
-description: This example shows you how to attach, update and delete user data.
+title: Attach, update, and delete user data
+description: This tutorial shows you how to use the [Workspace Client Library](https://developer.genhtcc.com/api/client-libraries/workspace/) to create, update, and delete user data for a call.
 categories: 
   - workspace
 displayName: Java
