--- a/create-user-provisioning-java/config.yaml
+++ b/create-user-provisioning-java/config.yaml
@@ -1,5 +1,5 @@
 title: Create a user
-description: This tutorial shows you how to use the [Provisioning Client Library](https://developer.genhtcc.com/api/client-libraries/provisioning/) to create a user.
+description: This tutorial shows you how to use the [Provisioning Client Library](/client-libraries/provisioning/) to create a user.
 categories: 
   - provisioning
 displayName: Java
