--- a/subscriptions-statistics-java/config.yaml
+++ b/subscriptions-statistics-java/config.yaml
@@ -1,5 +1,5 @@
 title: Work with subscriptions
-description: This tutorial will show how to subscribe to set of statistics and retrieve the notifications
+description: This tutorial shows you how to use the [Statistics Client Library](/client-libraries/statistics/) to subscribe to a set of statistics and get notifications about those statistics.
 categories: 
   - statistics
 displayName: Java
