--- a/create-user-provisioning-java/build.gradle
+++ b/create-user-provisioning-java/build.gradle
@@ -14,7 +14,7 @@ repositories {
  
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
-	compile 'com.genesys:provisioning:1.0.104'
+    compile 'com.genesys:provisioning:latest.integration'
 }
 
 jar {
