--- a/targets-workspace-nodejs/package.json
+++ b/targets-workspace-nodejs/package.json
@@ -10,8 +10,7 @@
   ],
   "contributors": [],
   "dependencies": {
-    "genesys-authorization-client-js": "1.0.188",
-    "genesys-workspace-client-js": "1.0.228"
+    "genesys-workspace-client-js": "latest"
   },
   "main": "src/main.js"
 }
