--- a/voice-ready-workspace-java/build.gradle
+++ b/voice-ready-workspace-java/build.gradle
@@ -15,8 +15,7 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.10'
-    compile 'com.genesys:workspace:1.0.104'
-    compile 'com.genesys:authorization:1.0.104'
+    compile 'com.genesys:workspace:latest.integration'
 }
 
 jar {
