--- a/book-callback-ges-nodejs/config.yaml
+++ b/book-callback-ges-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Book a Callback
-description: This Tutorial shows you how to use GES Callback API to book a callback.
+description: This Tutorial shows you how to use Callback API to book a callback.
 categories: 
-  - GES
+  - Callback
 displayName: Node.Js
