--- a/get-availability-ges-nodejs/config.yaml
+++ b/get-availability-ges-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Get Availability Tutorial
-description: This Tutorial shows you how to use GES Availability API to get the available time slots within a given period. The information retrieved can be used to book a scheduled callback for the desired available time slot.
+description: This Tutorial shows you how to use Availability API to get the available time slots within a given period. The information retrieved can be used to book a scheduled callback for the desired available time slot.
 categories: 
-  - GES
+  - Callback
 displayName: Node.Js
