--- a/get-ewt-ges-nodejs/config.yaml
+++ b/get-ewt-ges-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Get Estimated Wait Time (EWT) Tutorial
-description: This Tutorial shows you how to use GES EWT API to get the Estimated Wait Time (EWT) for agent availability.
+description: This Tutorial shows you how to use Estimated Wait Time (EWT) API to get the Estimated Wait Time for agent availability.
 categories: 
-  - GES
+  - Callback
 displayName: Node.Js
