--- a/get-office-hours-openfor-ges-nodejs/config.yaml
+++ b/get-office-hours-openfor-ges-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Office Hours Open For Time Tutorial
-description: This Tutorial shows you how to use GES Office Hours API to get information on how long the office will remain open for so that callbacks can be scheduled appropriately.
+description: This Tutorial shows you how to use Office Hours API to get information on how long the office will remain open for so that callbacks can be scheduled appropriately.
 categories: 
-  - GES
+  - Callback
 displayName: Node.Js
