GES-465-review-changes: Callback API changed to Callbacks API, Updated tutorials to indicate:Service Name in Callback, Availability, Office Hours  is configured in Designer NOT Platform Administrator, Removed the documentation links from the tutorials

--- a/book-callback-ges-nodejs/config.yaml
+++ b/book-callback-ges-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Book a Callback
-description: This Tutorial shows you how to use Callback API to book a callback.
+description: This Tutorial shows you how to use Callbacks API to book a callback.
 categories: 
   - Callback
 displayName: Node.Js
