Minor comments fixes

--- a/book-callback-ges-nodejs/config.yaml
+++ b/book-callback-ges-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Book a Callback
 description: This Tutorial shows you how to use Callbacks API to book a callback.
 categories: 
-  - Callback
+  - callback
 displayName: Node.Js
