--- a/get-business-hours-callbacks-nodejs/config.yaml
+++ b/get-business-hours-callbacks-nodejs/config.yaml
@@ -1,5 +1,5 @@
-title: Office Hours Open For Time Tutorial
-description: This Tutorial shows you how to use Office Hours API to get information on how long the office will remain open for so that callbacks can be scheduled appropriately.
+title: Business Hours Open For Time Tutorial
+description: This Tutorial shows you how to use Business Hours API to get information on how long the office will remain open for so that callbacks can be scheduled appropriately.
 categories: 
   - callback
 displayName: Node.Js
