--- a/get-business-hours-engagement-nodejs/config.yaml
+++ b/get-business-hours-engagement-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Business Hours Open For Time Tutorial
 description: This Tutorial shows you how to use Business Hours API to get information on how long the office will remain open for so that callbacks can be scheduled appropriately.
 categories: 
-  - callback
+  - engagement
 displayName: Node.Js
