GES - Updated tutorial json files to use new folder names i.e. use engagement instead of callbacks in the names

--- a/book-callback-engagement-nodejs/package.json
+++ b/book-callback-engagement-nodejs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-callbacks-nodejs",
+  "name": "book-callback-engagement-nodejs",
   "version": "1.0.0",
   "keywords": [
     "util",
