--- a/get-business-hours-engagement-nodejs/config.yaml
+++ b/get-business-hours-engagement-nodejs/config.yaml
@@ -1,4 +1,4 @@
-title: Business Hours Open For Time Tutorial
+title: Business Hours Open For Time
 description: This Tutorial shows you how to use Business Hours API to get information on how long the office will remain open for so that callbacks can be scheduled appropriately.
 categories: 
   - engagement
