--- a/book-callback-engagement-nodejs/config.yaml
+++ b/book-callback-engagement-nodejs/config.yaml
@@ -1,5 +1,5 @@
 title: Book a Callback
-description: This Tutorial shows you how to use Callbacks API to book a callback.
+description: This Tutorial shows you how to use Engagement API to book a callback.
 categories: 
   - engagement
 displayName: Node.Js
