--- a/get-dns-provisioning-java/config.yaml
+++ b/get-dns-provisioning-java/config.yaml
@@ -1,5 +1,5 @@
 title: Get DNs
-description: This tutorial shows you how to use the [Provisioning Client Library](/client-libraries/provisioning/) to get DN (Directory Number) objects given thier database IDs.
+description: This tutorial shows you how to use the [Provisioning Client Library](/client-libraries/provisioning/) to get DN (Directory Number) objects given their database IDs.
 categories: 
   - provisioning
 displayName: Java
