--- a/request-call-in-engagement-nodejs/config.yaml
+++ b/request-call-in-engagement-nodejs/config.yaml
@@ -1,5 +1,5 @@
-title: Request Call-In
-description: This Tutorial shows you how to use the Engagement API to request a Call-In and get the phone number to call along with the access code. The access code is available only if the feature is enabled in the configuration group.
+title: Request Click-To-Call-In
+description: This Tutorial shows you how to use the Engagement API to request a Click-To-Call-In and get the phone number to call along with the access code. The access code is available only if the feature is enabled in the configuration group.
 categories: 
   - engagement
 displayName: Node.Js
