--- a/get-availability-engagement-nodejs/package.json
+++ b/get-availability-engagement-nodejs/package.json
@@ -10,6 +10,7 @@
   ],
   "contributors": [],
   "dependencies": {
+    "engagement-client-js": "^9.0.18",
     "request": "latest",
     "request-promise": "latest"
   },
