Moved to the Engagement client SDK

--- a/get-ewt-engagement-nodejs/package.json
+++ b/get-ewt-engagement-nodejs/package.json
@@ -10,8 +10,7 @@
   ],
   "contributors": [],
   "dependencies": {
-    "request": "latest",
-    "request-promise": "latest"
+    "engagement-client-js": "^9.0.18"
   },
   "main": "src/main.js"
 }
