--- a/get-queuestatus-engagement-nodejs/config.yaml
+++ b/get-queuestatus-engagement-nodejs/config.yaml
@@ -1,5 +1,5 @@
-title: Get Availability
-description: This Tutorial shows you how to use Availability API to get the available time slots within a given period. The information retrieved can be used to book a scheduled callback for the desired available time slot.
+title: Get Queue Status
+description: This Tutorial shows you how to use Queue-Status API to Retrieves the estimated-wait-time and whether the queue accepts immediate and/or scheduled callbacks.
 categories: 
   - engagement
 displayName: Node.Js
