Fixed tutorials steps

--- a/request-click-to-call-in-engagement-java/config.yaml
+++ b/request-click-to-call-in-engagement-java/config.yaml
@@ -1,4 +1,4 @@
-title: Request Call In
+title: Request Click-To-Call-In
 description: This Tutorial shows you how to use the Engagement API to request a Click-To-Call-In and get the phone number to call along with the access code. The access code is available only if the feature is enabled in the configuration group.
 categories: 
   - engagement
